<?xml version="1.0" encoding="utf-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.microbean</groupId>
  <artifactId>microbean-lang-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>microBean™ Lang Parent</name>
  <description>microBean™ Lang Parent: The parent project of the microBean™ Lang project suite.</description>
  <inceptionYear>2023</inceptionYear>
  <url>https://microbean.github.io/microbean-lang</url>

  <licenses>
    <license>
      <comments>The Apache License, Version 2.0</comments>
      <distribution>repo</distribution>
      <name>Apache License 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <organization>
    <name>microBean™</name>
    <url>http://microbean.systems/</url>
  </organization>

  <developers>
    <developer>
      <id>ljnelson</id>
      <name>Laird Nelson</name>
      <email>ljnelson@gmail.com</email>
      <url>https://about.me/lairdnelson</url>
      <roles>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>-8</timezone>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:git@github.com:microbean/microbean-lang.git</connection>
    <developerConnection>scm:git:git@github.com:microbean/microbean-lang.git</developerConnection>
    <url>https://github.com/microbean/microbean-lang/</url>
    <tag>HEAD</tag>
  </scm>

  <issueManagement>
    <system>Github</system>
    <url>https://github.com/microbean/microbean-lang/issues</url>
  </issueManagement>

  <distributionManagement>
    <site>
      <id>Github Pages</id>
      <name>microBean™ Lang Site</name>
      <url>https://microbean.github.io/microbean-lang/</url>
    </site>
    <snapshotRepository>
      <id>sonatype-oss-repository-hosting</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
  </distributionManagement>

  <modules>
    <module>byte-buddy</module>
    <module>jandex</module>
    <module>lang</module>
  </modules>

  <dependencyManagement>
    <dependencies>


      <!-- Normal dependencies. -->


      <dependency>
        <groupId>io.smallrye</groupId>
        <artifactId>jandex</artifactId>
        <version>3.0.5</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>net.bytebuddy</groupId>
        <artifactId>byte-buddy</artifactId>
        <version>1.12.22</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.hamcrest</groupId>
        <artifactId>hamcrest</artifactId>
        <version>2.2</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.jboss</groupId>
        <artifactId>jandex</artifactId>
        <version>2.4.3.Final</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>5.9.0</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>5.9.0</version>
        <type>jar</type>
      </dependency>

      <!-- Module dependencies. -->

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>microbean-lang</artifactId>
        <version>${project.version}</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>microbean-lang-byte-buddy</artifactId>
        <version>${project.version}</version>
        <type>jar</type>
      </dependency>

      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>microbean-lang-jandex</artifactId>
        <version>${project.version}</version>
        <type>jar</type>
      </dependency>

    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>

        <plugin>
          <artifactId>maven-antrun-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.4.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-checkstyle-plugin</artifactId>
          <version>3.1.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <filesets>
              <fileset>
                <directory>${basedir}</directory>
                <includes>
                  <include>src/**/*~</include>
                  <include>*~</include>
                </includes>
              </fileset>
            </filesets>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.10.1</version>
          <configuration>
            <compilerArgs>
              <arg>--enable-preview</arg>
              <arg>-parameters</arg>
              <arg>-Xlint:all</arg>
              <arg>-Xlint:-preview</arg>
              <arg>-Xpkginfo:always</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-dependency-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-enforcer-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>3.0.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.4.1</version>
          <configuration>
            <additionalJOptions combine.children="append">
              <additionalJOption>-J-Dhttp.agent=maven-javadoc-plugin</additionalJOption>
            </additionalJOptions>
            <additionalOptions>
              <additionalOption>--add-stylesheet</additionalOption>
              <additionalOption>${project.basedir}/src/main/javadoc/css/fonts.css</additionalOption>
              <additionalOption>--enable-preview</additionalOption>
            </additionalOptions>
            <docfilessubdirs>true</docfilessubdirs>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-plugin-plugin</artifactId>
          <version>3.6.4</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.4.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>3.0.0-M6</version> <!-- see https://issues.apache.org/jira/browse/MRELEASE-1038 -->
        </plugin>
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.3.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-scm-plugin</artifactId>
          <version>1.13.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-scm-publish-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>4.0.0-M4</version>
          <executions>
            <execution>
              <id>Stage site</id>
              <goals>
                <goal>stage</goal>
              </goals>
              <phase>post-site</phase>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M7</version>
          <configuration>
            <argLine>--enable-preview</argLine>
            <properties>
              <configurationParameters>
                junit.jupiter.execution.parallel.enabled=false
                junit.jupiter.execution.parallel.mode.default=concurrent
              </configurationParameters>
            </properties>
            <systemPropertyVariables>
              <project.basedir>${project.basedir}</project.basedir>
              <project.build.directory>${project.build.directory}</project.build.directory>
              <project.build.testOutputDirectory>${project.build.testOutputDirectory}</project.build.testOutputDirectory>
            </systemPropertyVariables>
          </configuration>
          <dependencies>
            <!-- See https://lists.apache.org/thread/dr5r15kq2gd4x644k50wv8olz6qo3j00 -->
            <dependency>
              <groupId>org.ow2.asm</groupId>
              <artifactId>asm</artifactId>
              <version>9.4</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <artifactId>maven-toolchains-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>com.github.spotbugs</groupId>
          <artifactId>spotbugs-maven-plugin</artifactId>
          <version>4.7.1.1</version>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>2.11.0</version>
        </plugin>
        <plugin>
          <groupId>org.jboss.jandex</groupId>
          <artifactId>jandex-maven-plugin</artifactId>
          <version>1.2.3</version>
        </plugin>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6.8</version>
          <extensions>true</extensions>
          <dependencies>
            <!-- https://issues.sonatype.org/browse/NEXUS-26993?focusedCommentId=1098136&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-1098136 -->
            <dependency>
              <groupId>com.thoughtworks.xstream</groupId>
              <artifactId>xstream</artifactId>
              <version>1.4.15</version>
            </dependency>
          </dependencies>
          <configuration>
            <serverId>sonatype-oss-repository-hosting</serverId>
            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
            <autoReleaseAfterClose>true</autoReleaseAfterClose>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.jboss.jandex</groupId>
        <artifactId>jandex-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>make-index</id>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.sonatype.plugins</groupId>
        <artifactId>nexus-staging-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <properties>

    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>

    <!-- maven-javadoc-plugin properties -->
    <bottom><![CDATA[Copyright &copy; ${project.inceptionYear}&ndash;{currentYear}, <a href="${project.organization.url}" target="_top">${project.organization.name}</a>. All rights reserved.]]></bottom>
    <detectJavaApiLink>false</detectJavaApiLink>
    <detectLinks>false</detectLinks>
    <links>https://docs.oracle.com/en/java/javase/19/docs/api/,https://microbean.github.io/microbean-development-annotations/apidocs/</links>

    <!-- maven-release-plugin properties; see http://maven.apache.org/maven-release/maven-release-plugin/ -->
    <goals>deploy,post-site,scm-publish:publish-scm</goals>

    <!-- See http://central.sonatype.org/pages/apache-maven.html#performing-a-release-deployment-with-the-maven-release-plugin -->
    <releaseProfiles>deployment</releaseProfiles>
    <scmCommentPrefix>[maven-release-plugin] [skip ci]</scmCommentPrefix>
    <tagNameFormat>v@{project.version}</tagNameFormat>
    <useReleaseProfile>false</useReleaseProfile>

    <!-- maven-scm-publish-plugin properties;
         see https://maven.apache.org/plugins/maven-scm-publish-plugin/publish-scm-mojo.html -->
    <scmpublish.content>${project.reporting.outputDirectory}</scmpublish.content>
    <scmpublish.pubScmUrl>${project.scm.developerConnection}</scmpublish.pubScmUrl>
    <scmpublish.scm.branch>gh-pages</scmpublish.scm.branch>

    <!-- maven-site-plugin properties -->
    <maven.site.deploy.skip>true</maven.site.deploy.skip>
    <relativizeDecorationLinks>false</relativizeDecorationLinks>
    <siteOutputDirectory>${project.build.directory}/staging</siteOutputDirectory>
    <topSiteUrl>https://microbean.github.io/microbean-lang/</topSiteUrl>

    <!-- maven-surefire-plugin properties -->
    <surefire.useFile>false</surefire.useFile>
    <trimStackTrace>false</trimStackTrace>

    <!-- nexus-staging-maven-plugin properties -->
    <!-- See https://github.com/sonatype/nexus-maven-plugins/blob/0aee3defb33cb133ff536aba59b11d32a368b1e6/staging/maven-plugin/src/main/java/org/sonatype/nexus/maven/staging/AbstractStagingMojo.java#L169-L175 -->
    <stagingProgressTimeoutMinutes>10</stagingProgressTimeoutMinutes>

    <!-- Other properties -->
    <project.build.sourceEncoding>UTF8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF8</project.reporting.outputEncoding>

  </properties>

  <reporting>
    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <reportSets>
          <reportSet>
            <id>aggregate</id>
            <inherited>false</inherited>
            <reports>
              <report>aggregate</report>
            </reports>
          </reportSet>
          <reportSet>
            <id>default</id>
            <inherited>true</inherited>
            <reports>
              <report>javadoc</report>
            </reports>
          </reportSet>
        </reportSets>
      </plugin>
    </plugins>
  </reporting>

  <profiles>
    <profile>
      <id>deployment</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-javadoc-plugin</artifactId>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-source-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
